--- a/FinalProject2/Base.lproj/Main.storyboard
+++ b/FinalProject2/Base.lproj/Main.storyboard
@@ -29,6 +29,26 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kcR-AK-hpA" customClass="SliderMenuView" customModule="FinalProject2" customModuleProvider="target">
                                 <rect key="frame" x="-270" y="0.0" width="265" height="667"/>
                                 <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sfi-On-WGY">
+                                        <rect key="frame" x="0.0" y="557" width="265" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="7gS-Cu-vJd"/>
+                                        </constraints>
+                                        <state key="normal" title="Setting"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kDO-Vo-Rft">
+                                        <rect key="frame" x="0.0" y="607" width="265" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="oov-Ht-Lj1"/>
+                                        </constraints>
+                                        <state key="normal" title="Logout"/>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xIC-FG-ogb" customClass="CategoryViewInSliderMenu" customModule="FinalProject2" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="202" width="265" height="348"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="348" id="mOI-aW-AkR"/>
+                                        </constraints>
+                                    </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H1A-Z6-b7p">
                                         <rect key="frame" x="0.0" y="0.0" width="265" height="202"/>
                                     </view>
@@ -38,8 +58,17 @@
                                     <constraint firstAttribute="trailing" secondItem="H1A-Z6-b7p" secondAttribute="trailing" id="0FT-7A-KcB"/>
                                     <constraint firstItem="H1A-Z6-b7p" firstAttribute="top" secondItem="kcR-AK-hpA" secondAttribute="top" id="B6I-uq-HvE"/>
                                     <constraint firstItem="H1A-Z6-b7p" firstAttribute="leading" secondItem="kcR-AK-hpA" secondAttribute="leading" id="DF9-OY-tOn"/>
+                                    <constraint firstAttribute="trailing" secondItem="Sfi-On-WGY" secondAttribute="trailing" id="DXs-xm-wJS"/>
+                                    <constraint firstItem="kDO-Vo-Rft" firstAttribute="leading" secondItem="kcR-AK-hpA" secondAttribute="leading" id="DtK-hm-iDp"/>
+                                    <constraint firstItem="kDO-Vo-Rft" firstAttribute="top" secondItem="Sfi-On-WGY" secondAttribute="bottom" id="EOe-1s-Jns"/>
                                     <constraint firstAttribute="bottom" secondItem="H1A-Z6-b7p" secondAttribute="bottom" constant="465" id="NrQ-X1-TsW"/>
+                                    <constraint firstAttribute="trailing" secondItem="xIC-FG-ogb" secondAttribute="trailing" id="Org-mj-Gtq"/>
+                                    <constraint firstAttribute="bottom" secondItem="kDO-Vo-Rft" secondAttribute="bottom" constant="10" id="c5i-zO-USz"/>
+                                    <constraint firstItem="xIC-FG-ogb" firstAttribute="leading" secondItem="kcR-AK-hpA" secondAttribute="leading" id="dIy-Gi-tRn"/>
+                                    <constraint firstAttribute="trailing" secondItem="kDO-Vo-Rft" secondAttribute="trailing" id="ddW-gw-GuA"/>
                                     <constraint firstAttribute="width" constant="265" id="t7J-H6-tlR"/>
+                                    <constraint firstItem="Sfi-On-WGY" firstAttribute="leading" secondItem="kcR-AK-hpA" secondAttribute="leading" id="w20-yv-4vP"/>
+                                    <constraint firstItem="xIC-FG-ogb" firstAttribute="top" secondItem="H1A-Z6-b7p" secondAttribute="bottom" id="ygN-oP-tUv"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="76" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6R9-I0-Dc0">
@@ -390,7 +419,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fps-MF-j6X">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" scrollEnabled="NO" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fps-MF-j6X">
                                 <rect key="frame" x="67" y="222" width="240" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </scrollView>
